--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext js,ts,tsx,jsx .",
+    "lintfix": "eslint --ext js,ts,tsx,jsx . --fix",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "next": "9.5.3",
@@ -15,6 +18,13 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.2",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
