--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "muicss": "^0.10.3",
+    "@material-ui/core": "^4.11.3",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
